travis-ci integrated

--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   },
   "keywords": [
     "javascript",
-    "typescript",
-    "test",
+    "algorithms",
+    "algorithm",
+    "data-structure",
+    "data-structures",
+    "computer-science",
+    "algorithm-concepts",
+    "coding-interviews"
     "unit",
     "test"
   ],
