fix error package-json

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "data-structures",
     "computer-science",
     "algorithm-concepts",
-    "coding-interviews"
+    "coding-interviews",
     "unit",
     "test"
   ],
