--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,14 @@
 language: node_js
 node_js:
-  - "stable"
+  - "10"
 cache:
   directories:
     - node_modules
 install:
   - npm install
 script: 
+  - npm run test
+after_success:
   - npm run test:coverage
 on:
   branch: master
