--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
-    "test:coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
+    "test:coverage": "npm run test && jest --coverage && cat ./coverage/lcov.info"
   },
   "repository": {
     "type": "git",
@@ -37,6 +37,6 @@
     "babel-jest": "^25.1.0",
     "coveralls": "^3.0.7",
     "jest": "^25.1.0",
-    "nyc": "^14.1.1"
+    "nyc": "^13.3.0"
   }
 }
