--- a/package.json
+++ b/package.json
@@ -34,8 +34,12 @@
     "@babel/core": "^7.8.7",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/jest": "^25.1.4",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "babel-jest": "^25.1.0",
     "coveralls": "^3.0.7",
+    "eslint": "^6.8.0",
     "jest": "^25.1.0",
     "nyc": "^13.3.0"
   }
