--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Javascript data structure and algorithm",
   "main": "index.js",
   "scripts": {
+    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint prettier",
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
     "test:coverage": "NODE_ENV=test jest --coverage && cat ./coverage/lcov.info | coveralls"
@@ -40,7 +42,10 @@
     "babel-jest": "^25.1.0",
     "coveralls": "^3.0.7",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "jest": "^25.1.0",
-    "nyc": "^13.3.0"
+    "nyc": "^13.3.0",
+    "prettier": "^1.19.1"
   }
 }
